css/styles.css
.navbar {
    font-family: 'Inconsolata', monospace;
}

.masthead {
    background-size: contain;
    background-repeat: no-repeat;
    position: relative;

}

@media (max-width: 768px) {
    .masthead {
        min-height: 30vh;
        margin: auto;
        top: 30px;
    }
}

.carousel-inner {
    margin: auto;
    bottom: 25px;
    height: 70%;
    width: 70%;
}

h1 {
    font-family: 'Permanent Marker';
    color: #0071cf;
}

h3 {
    font-family: 'Mansalva';
    font-family: 'Permanent Marker';  
    color: #0071cf;
}

p {
    font-family: 'Montserrat', sans-serif;
}

#connect {
    color: black;
    
}

p {
    font-family: 'Inconsolata', monospace;
}

#carousel-1, #carousel-2 {
    display: block;
    padding: 50px;
}

#studio {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    
}

#flextopia {
    display: block;
    margin-left: auto;
    margin-right: auto;
    
}

#email h1 {
    margin-top: 0px;
    font-family: 'Inconsolata', monospace;
    color: black;
}

#copyright {
    font-family: 'Inconsolata', monospace;
}

#gallery {
    color: black;
}

.btn:focus, .btn:active, button:focus, button:active {
    outline: none !important;
    box-shadow: none !important;
  }
  
  #image-gallery .modal-footer{
    display: block;
  }
  
  .thumb{
    margin-top: 15px;
    margin-bottom: 15px;
  }

